# CPP-software

./: Abgabe1.sln  SoftwarelaborSS21.sln
Abgabe 2/: Abgabe 2.c  Abgabe 2.vcxproj  Abgabe 2.vcxproj.filters
Abgabe1/: Abgabe1.c  Abgabe1.vcxproj  Abgabe1.vcxproj.filters
Abgabe2/: Abgabe2.c  Abgabe2.vcxproj  Abgabe2.vcxproj.filters
Aufgabe2/: Aufgabe2.c  Aufgabe2.vcxproj
Aufgabe3/: Aufgabe3.vcxproj  Aufgabe3.vcxproj.filters  Main.cpp  String.cpp  String.h
Aufgabe4/: Aufgabe4.vcxproj  Aufgabe4.vcxproj.filters  CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  testParser.cpp  testVM.cpp  tokenizer.cpp  tokenizer.h  vm.cpp  vm.h
Aufgabe4.2/: Aufgabe4.2.vcxproj  Aufgabe4.2.vcxproj.filters  Makefile.txt
